added the team info

--- a/readme/readme.html
+++ b/readme/readme.html
@@ -16,7 +16,46 @@
         <p>Have a great day :)</p>
         <br>
         <p>- Team Readme</p>
-      </strong>
+          </strong>
+          <br>
+          <br>
+         <h1>Our Idea</h1>
+        <br>
+         <strong>
+          <p>We just thought about college students like us that how we manage to use books in our college. Each and every undergraduate course has number of semesters and in those semesters, we have to study for number of subjects. Not even a single subject repeats in another semester. Although, faculties provide multiple notes for their subjects, but still there are some suggested books by famous authors which are even also suggested by our teachers. But a student cannot buy books in every semester as those books left untouched just after the semester, even some of those books are not easily available and are also expensive. </p>
+          <p>So, our team worked on this thinking and created a portal just for college students where almost every book of every semester is uploaded there. The students can easily just search the book with their author’s name and they can read their books for free with us. Right now, we are at our very initial stage that we created this portal for our two streams: - BCA and BBA. </p>
+          <p>For these two streams almost, every book is available. If in case any author’s book is missing users can just email us; we will make sure that the required book is uploaded quickly. </p>
+          <p>Remember we are at our initial stage so the books are not available to download, they are just there to read online.</p>
+
+         </strong>
+
+         <br>
+          <br>
+         <h1>Our Team</h1>
+        <br>
+        <strong>
+          <p>Team work is the most important factor to complete any work. Here we also formed a team of 7 members. This portal consists opinions of each and every member of our group. This is not the hard work of any single person; we all just combined and provide opinions about a selected idea. Of course, we do have a team leader or captain of the team, who gave his best to make this project. Time to introduce our team member:</p>
+          <p>Abhinandan Lahori --> The captain of the team, and the best in coding of the portal.</p>
+          <p>Prashant Sharma --> The person who managed the database of the portal.</p>
+          <p>Aman Sharma --> The theme and graphics designer.</p>
+          <p>Himani Baghel --> She coordinated with Aman Sharma and they both designed the themes and graphics.</p>
+          <p>Vanshika Sharma --> The girl who understood each and every step of the project and prepared a detailed report.</p>
+          <p>Nitika Sharma --> The one who coordinated with Vanshika Sharma and prepared a detailed presentation which is going to be displayed.</p>
+          <p>Aman Verma --> He managed and edited every other content needed for the whole portal.</p>
+          <p>We seven grouped together and combined our ideas to help college students like us.</p>
+
+        </strong>
+
+        <br>
+          <br>
+         <h1>Our Promise</h1>
+        <br>
+        <strong>
+          <p>We all promise to add more and more books to our portal. In some time, we will increase the number of UG courses for other students also. The team will make sure to provide students the most cost-efficient way to learn and study. </p>
+          <p>We all wants to thank you for watching our project. </p>
+        </strong>
+
+      
     </div>
         
   </body>
@@ -64,5 +103,7 @@ body {
 
 
 </style>
+
+
 
 
