--- a/readme/readme.html
+++ b/readme/readme.html
@@ -5,7 +5,7 @@
     
 
     <div class="liquid">
-        <h1>What is readme?</h1>
+        <h1>What is README?</h1>
         <br>
         
           <strong>
